--- a/app/views/admin/billing/prices/_form.html.erb
+++ b/app/views/admin/billing/prices/_form.html.erb
@@ -41,10 +41,10 @@
 
         <div class="col-sm-6">
             <div class="input-group">
-                <%= f.text_field :valid_from, value: f.object.valid_from.try(:to_s, :dshort),
+                <%= f.text_field :valid_from, value: l(f.object.valid_from, format: :date),
                                  class: 'form-control datepicker' %>
                 <span class="input-group-addon">-</span>
-                <%= f.text_field :valid_to, value: f.object.valid_to.try(:to_s, :dshort),
+                <%= f.text_field :valid_to, value: l(f.object.valid_to, format: :date),
                                  class: 'form-control datepicker' %>
             </div>
         </div>
