Improve price list
#538

--- a/app/assets/stylesheets/admin-manifest.sass
+++ b/app/assets/stylesheets/admin-manifest.sass
@@ -11,4 +11,5 @@
 @import selectize.bootstrap3
 // @import bootstrap-datepicker3
 @import admin/admin
+@import admin/billing/prices
 @import admin/bootstrap-dialog-fix
