Allow specifying time for price effective and expiration dates
#538

--- a/app/assets/stylesheets/admin-manifest.sass
+++ b/app/assets/stylesheets/admin-manifest.sass
@@ -11,5 +11,6 @@
 @import selectize.bootstrap3
 // @import bootstrap-datepicker3
 @import admin/admin
+@import admin/rails
 @import admin/billing/prices
 @import admin/bootstrap-dialog-fix
