--- a/app/assets/stylesheets/admin/billing/prices.scss
+++ b/app/assets/stylesheets/admin/billing/prices.scss
@@ -25,3 +25,27 @@
         }
     }
 }
+
+.form-horizontal {
+    .date-field {
+        display: inline;
+        width: 120px;
+    }
+
+    .time-field {
+        display: inline;
+        width: 95px;
+    }
+}
+
+.form-horizontal {
+    .date-field {
+        display: inline;
+        width: 120px;
+    }
+
+    .time-field {
+        display: inline;
+        width: 95px;
+    }
+}
