--- a/app/views/admin/billing/prices/_form.html.erb
+++ b/app/views/admin/billing/prices/_form.html.erb
@@ -37,16 +37,18 @@
     </div>
 
     <div class="form-group">
-        <%= f.label :valid_from, class: 'col-sm-2 control-label' %>
+        <%= f.label :validity, class: 'col-sm-2 control-label' %>
 
-        <div class="col-sm-6">
-            <div class="input-group">
-                <%= f.text_field :valid_from, value: l(f.object.valid_from, format: :date),
-                                 class: 'form-control datepicker' %>
-                <span class="input-group-addon">-</span>
-                <%= f.text_field :valid_to, value: l(f.object.valid_to, format: :date),
-                                 class: 'form-control datepicker' %>
-            </div>
+        <div class="col-sm-10">
+            <%= f.date_field :effect_time_date, required: true, class: 'form-control' %>
+            <%= f.time_field :effect_time_time, required: true, class: 'form-control' %>
+
+            <%= t '.to' %>
+
+            <%= f.date_field :expire_time_date, class: 'form-control' %>
+            <%= f.time_field :expire_time_time, class: 'form-control' %>
+
+            <p class="help-block"><%= t '.validity_help_html' %></p>
         </div>
     </div>
 
@@ -54,7 +56,7 @@
 
     <div class="row">
         <div class="col-md-8 text-right">
-            <%= f.submit t(".#{f.object.new_record? ? 'create' : 'update'}_btn"), class: 'btn btn-success', name: nil %>
+            <%= f.submit t(".#{!f.object.persisted? ? 'create' : 'update'}_btn"), class: 'btn btn-success', name: nil %>
         </div>
     </div>
 <% end %>
