--- a/app/views/admin/settings/index.haml
+++ b/app/views/admin/settings/index.haml
@@ -56,6 +56,7 @@
     .table-responsive
       %table.table.table-hover.table-bordered.table-condensed
         %tbody
+          = render 'setting_row', var: :extended_price_lookup
           = render 'setting_row', var: :invoice_number_min
           = render 'setting_row', var: :invoice_number_max
           = render 'setting_row', var: :directo_monthly_number_min
