--- a/app/views/admin/billing/prices/_form.html.erb
+++ b/app/views/admin/billing/prices/_form.html.erb
@@ -12,7 +12,7 @@
     </div>
 
     <div class="form-group">
-        <%= f.label :operation_category, class: 'col-sm-2 control-label' %>
+        <%= f.label :operation_category, class: 'col-sm-2 control-label', for: nil %>
 
         <div class="col-sm-3">
             <%= f.collection_check_boxes :operation_category, operation_categories, :to_s, :to_s do |b| %>
