--- a/app/views/admin/billing/prices/_form.html.erb
+++ b/app/views/admin/billing/prices/_form.html.erb
@@ -22,10 +22,12 @@
     </div>
 
     <div class="form-group">
-        <%= f.label :duration, class: 'col-sm-2 control-label' %>
+        <%= f.label :duration, class: 'col-sm-2 control-label', for: nil %>
 
         <div class="col-sm-3">
-            <%= f.select :duration, durations, {}, class: 'form-control', required: true %>
+            <%= f.collection_check_boxes :duration, durations, :to_s, :to_s do |b| %>
+                <div class="checkbox"><%= b.label { b.check_box + b.text } %></div>
+            <% end %>
         </div>
     </div>
 
