--- a/app/views/admin/dns/zones/_form.html.erb
+++ b/app/views/admin/dns/zones/_form.html.erb
@@ -106,6 +106,15 @@
                         <%= f.text_area :a4_records, class: 'form-control', rows: 8 %>
                     </div>
                 </div>
+
+                <div class="form-group">
+                    <div class="col-md-4 control-label">
+                        <%= f.label :accounting_product_code %>
+                    </div>
+                    <div class="col-md-8">
+                        <%= f.text_field :accounting_product_code, class: 'form-control', required: true %>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
