--- a/app/views/registrar/invoices/_search_form.html.erb
+++ b/app/views/registrar/invoices/_search_form.html.erb
@@ -6,28 +6,28 @@
                 <div class="col-md-3">
                     <div class="form-group">
                         <%= f.label t('.minimum_invoice_no') %>
-                        <%= f.search_field :number_gteq, class: 'form-control', placeholder: t('.minimum_invoice_no'), autocomplete: 'off' %>
+                        <%= f.search_field :number_gteq, class: 'form-control', autocomplete: 'off' %>
                     </div>
                 </div>
 
                 <div class="col-md-3">
                     <div class="form-group">
                         <%= f.label t('.maximum_invoice_no') %>
-                        <%= f.search_field :number_lteq, class: 'form-control', placeholder: t('.maximum_invoice_no'), autocomplete: 'off' %>
+                        <%= f.search_field :number_lteq, class: 'form-control', autocomplete: 'off' %>
                     </div>
                 </div>
 
                 <div class="col-md-3">
                     <div class="form-group">
                         <%= f.label t('.due_date_from') %>
-                        <%= f.search_field :due_date_gteq, value: params[:q][:due_date_gteq], class: 'form-control js-datepicker', placeholder: t('.due_date_from') %>
+                        <%= f.search_field :due_date_gteq, value: params[:q][:due_date_gteq], class: 'form-control js-datepicker' %>
                     </div>
                 </div>
 
                 <div class="col-md-3">
                     <div class="form-group">
                         <%= f.label t('.due_date_until') %>
-                        <%= f.search_field :due_date_lteq, value: params[:q][:due_date_lteq], class: 'form-control js-datepicker', placeholder: t('.due_date_until') %>
+                        <%= f.search_field :due_date_lteq, value: params[:q][:due_date_lteq], class: 'form-control js-datepicker' %>
                     </div>
                 </div>
             </div>
@@ -36,14 +36,14 @@
                 <div class="col-md-3">
                     <div class="form-group">
                         <%= f.label t('.minimum_total') %>
-                        <%= f.search_field :sum_cache_gteq, class: 'form-control', placeholder: t('.minimum_total'), autocomplete: 'off' %>
+                        <%= f.search_field :sum_cache_gteq, class: 'form-control', autocomplete: 'off' %>
                     </div>
                 </div>
 
                 <div class="col-md-3">
                     <div class="form-group">
                         <%= f.label t('.maximum_total') %>
-                        <%= f.search_field :sum_cache_lteq, class: 'form-control', placeholder: t('.maximum_total'), autocomplete: 'off' %>
+                        <%= f.search_field :sum_cache_lteq, class: 'form-control', autocomplete: 'off' %>
                     </div>
                 </div>
 
