--- a/app/views/registrar/invoices/partials/_items.haml
+++ b/app/views/registrar/invoices/partials/_items.haml
@@ -6,7 +6,7 @@
       %tr
         %th{class: 'col-xs-4'}= t(:description)
         %th{class: 'col-xs-2'}= t(:unit)
-        %th{class: 'col-xs-2'}= t(:amount)
+        %th{class: 'col-xs-2'}= InvoiceItem.human_attribute_name :quantity
         %th{class: 'col-xs-2'}= t(:price)
         %th{class: 'col-xs-2'}= t(:total)
     %tbody
@@ -14,7 +14,7 @@
         %tr
           %td= t(x.description)
           %td= x.unit
-          %td= currency(x.amount)
+          %td= x.quantity
           %td= currency(x.price)
           %td= currency(x.item_sum_without_vat)
     %tfoot
