--- a/app/views/registrar/invoices/pdf.haml
+++ b/app/views/registrar/invoices/pdf.haml
@@ -224,7 +224,7 @@
                 %tr
                   %th{class: 'col-xs-4'}= t(:description)
                   %th{class: 'col-xs-2'}= t(:unit)
-                  %th{class: 'col-xs-1'}= t(:amount)
+                  %th{class: 'col-xs-1'}= InvoiceItem.human_attribute_name :quantity
                   %th{class: 'col-xs-3'}= t(:price)
                   %th{class: 'col-xs-2'}= t(:total)
               %tbody
@@ -232,7 +232,7 @@
                   %tr
                     %td= t(x.description)
                     %td= x.unit
-                    %td= currency(x.amount)
+                    %td= x.quantity
                     %td= currency(x.price)
                     %td= "#{currency(x.item_sum_without_vat)} #{@invoice.currency}"
               %tfoot
