--- a/app/views/registrar/invoices/partials/_items.html.erb
+++ b/app/views/registrar/invoices/partials/_items.html.erb
@@ -15,13 +15,13 @@
         </thead>
 
         <tbody>
-            <% @invoice.items.each do |x| %>
+            <% @invoice.items.each do |invoice_item| %>
                 <tr>
-                    <td><%= x.description %></td>
-                    <td><%= x.unit %></td>
-                    <td><%= x.quantity %></td>
-                    <td><%= currency(x.price) %></td>
-                    <td><%= currency(x.item_sum_without_vat) %></td>
+                    <td><%= invoice_item.description %></td>
+                    <td><%= invoice_item.unit %></td>
+                    <td><%= invoice_item.quantity %></td>
+                    <td><%= currency(invoice_item.price) %></td>
+                    <td><%= currency(invoice_item.item_sum_without_vat) %></td>
                 </tr>
             <% end %>
         </tbody>
