--- a/app/views/registrar/invoices/partials/_items.html.erb
+++ b/app/views/registrar/invoices/partials/_items.html.erb
@@ -21,7 +21,7 @@
                     <td><%= invoice_item.unit %></td>
                     <td><%= invoice_item.quantity %></td>
                     <td><%= currency(invoice_item.price) %></td>
-                    <td><%= currency(invoice_item.item_sum_without_vat) %></td>
+                    <td><%= number_to_currency invoice_item.amount %></td>
                 </tr>
             <% end %>
         </tbody>
