--- a/app/views/registrar/invoices/partials/_items.html.erb
+++ b/app/views/registrar/invoices/partials/_items.html.erb
@@ -30,7 +30,7 @@
             <tr>
                 <th colspan="3"></th>
                 <th><%= t(:total_without_vat) %></th>
-                <td><%= currency(@invoice.sum_without_vat) %></td>
+                <td><%= number_to_currency @invoice.subtotal %></td>
             </tr>
             <tr>
                 <th class="no-border" colspan="3"></th>
