--- a/app/views/admin/bank_transactions/show.haml
+++ b/app/views/admin/bank_transactions/show.haml
@@ -36,7 +36,7 @@
       %dd= @bank_transaction.description
 
       %dt= t(:sum)
-      %dd= currency(@bank_transaction.sum)
+      %dd= number_to_currency @bank_transaction.sum
 
       %dt= t(:currency)
       %dd= @bank_transaction.currency
