--- a/app/views/registrar/invoices/pdf.haml
+++ b/app/views/registrar/invoices/pdf.haml
@@ -233,8 +233,8 @@
                     %td= t(x.description)
                     %td= x.unit
                     %td= x.quantity
-                    %td= currency(x.price)
-                    %td= number_to_currency(x.amount, format: '%n')
+                    %td= number_to_currency x.price
+                    %td= number_to_currency x.amount
               %tfoot
                 %tr
                   %th{colspan: 3}
@@ -243,11 +243,11 @@
                 %tr
                   %th.no-border{colspan: 3}
                   %th= t('vat', rate: (@invoice.vat_rate * 100).round)
-                  %td= "#{currency(@invoice.vat)} #{@invoice.currency}"
+                  %td= number_to_currency @invoice.vat
                 %tr
                   %th.no-border{colspan: 3}
                   %th= t(:total)
-                  %td= "#{currency(@invoice.sum)} #{@invoice.currency}"
+                  %td= number_to_currency @invoice.sum
 
       #footer
         %hr
