Rename Invoice#sum to total, Invoice#vat to vat_amount
#509

--- a/app/views/registrar/invoices/index.html.erb
+++ b/app/views/registrar/invoices/index.html.erb
@@ -54,7 +54,7 @@
                             <%= l(x.due_date, format: :date_long) %>
                         </td>
                         <td>
-                            <%= number_to_currency x.sum %>
+                            <%= number_to_currency x.total %>
                         </td>
                     </tr>
                 <% end %>
