Use Invoice#total instead of sum_cache
#509

--- a/app/views/registrar/invoices/_search_form.html.erb
+++ b/app/views/registrar/invoices/_search_form.html.erb
@@ -36,14 +36,14 @@
                 <div class="col-md-3">
                     <div class="form-group">
                         <%= f.label t('.minimum_total') %>
-                        <%= f.search_field :sum_cache_gteq, class: 'form-control', autocomplete: 'off' %>
+                        <%= f.search_field :total_gteq, class: 'form-control', autocomplete: 'off' %>
                     </div>
                 </div>
 
                 <div class="col-md-3">
                     <div class="form-group">
                         <%= f.label t('.maximum_total') %>
-                        <%= f.search_field :sum_cache_lteq, class: 'form-control', autocomplete: 'off' %>
+                        <%= f.search_field :total_lteq, class: 'form-control', autocomplete: 'off' %>
                     </div>
                 </div>
 
