--- a/app/views/registrar/invoices/index.html.erb
+++ b/app/views/registrar/invoices/index.html.erb
@@ -51,7 +51,7 @@
                             </td>
                         <% end %>
                         <td>
-                            <%= l(x.due_date, format: :date_long) %>
+                            <%= l x.due_date %>
                         </td>
                         <td>
                             <%= number_to_currency x.total %>
