--- a/app/views/registrar/invoices/partials/_details.haml
+++ b/app/views/registrar/invoices/partials/_details.haml
@@ -12,7 +12,7 @@
   - if @invoice.cancelled?
     %dd.text-grey= t(:cancelled)
   - else
-    %dd= l(@invoice.due_date, format: :date_long)
+    %dd= l @invoice.due_date
 
   %dt= t(:receipt_date)
   - if @invoice.binded?
