--- a/app/views/admin/registrars/show.html.erb
+++ b/app/views/admin/registrars/show.html.erb
@@ -41,12 +41,6 @@
                         <%= @registrar.reg_no %>
                     </dd>
                     <dt>
-                        <%= t(:vat_no) %>
-                    </dt>
-                    <dd>
-                        <%= @registrar.vat_no %>
-                    </dd>
-                    <dt>
                         <%= t(:reference_no) %>
                     </dt>
                     <dd>
@@ -69,12 +63,6 @@
                     </dt>
                     <dd>
                         <%= @registrar.website %>
-                    </dd>
-                    <dt>
-                        <%= Registrar.human_attribute_name :accounting_customer_code %>
-                    </dt>
-                    <dd>
-                        <%= @registrar.accounting_customer_code %>
                     </dd>
                 </dl>
             </div>
@@ -119,15 +107,10 @@
                     <dd>
                         <%= @registrar.billing_address %>
                     </dd>
-                    <dt>
-                        <%= t(:billing_email) %>
-                    </dt>
-                    <dd>
-                        <%= @registrar.billing_email %>
-                    </dd>
                 </dl>
             </div>
         </div>
+        <%= render 'billing', registrar: @registrar %>
     </div>
 </div>
 <div class="row">
