Remove unused attribute
#509

--- a/app/views/registrar/invoices/partials/_details.haml
+++ b/app/views/registrar/invoices/partials/_details.haml
@@ -22,8 +22,8 @@
   - else
     %dd{class: 'text-danger'}= t(:unpaid)
 
-  %dt= t(:payment_term)
-  %dd= t(@invoice.payment_term)
+  %dt= Invoice.human_attribute_name :payment_term
+  %dd= t '.prepayment'
 
   %dt= t(:invoice_number)
   %dd= @invoice.number
