--- a/app/views/registrar/invoices/partials/_items.html.erb
+++ b/app/views/registrar/invoices/partials/_items.html.erb
@@ -29,12 +29,12 @@
         <tfoot>
             <tr>
                 <th colspan="3"></th>
-                <th><%= t(:total_without_vat) %></th>
+                <th><%= Invoice.human_attribute_name :subtotal %></th>
                 <td><%= number_to_currency @invoice.subtotal %></td>
             </tr>
             <tr>
                 <th class="no-border" colspan="3"></th>
-                <th><%= t('vat', rate: (@invoice.vat_rate * 100).round) %></th>
+                <th><%= Invoice.human_attribute_name :vat_amount_with_rate, rate: (@invoice.vat_rate * 100).round %></th>
                 <td><%= number_to_currency @invoice.vat_amount %></td>
             </tr>
             <tr>
