--- a/app/views/registrar/invoices/pdf.haml
+++ b/app/views/registrar/invoices/pdf.haml
@@ -230,7 +230,7 @@
               %tbody
                 - @invoice.items.each do |x|
                   %tr
-                    %td= t(x.description)
+                    %td= x.description
                     %td= x.unit
                     %td= x.quantity
                     %td= number_to_currency x.price
@@ -238,11 +238,11 @@
               %tfoot
                 %tr
                   %th{colspan: 3}
-                  %th= t(:total_without_vat)
+                  %th= Invoice.human_attribute_name :subtotal
                   %td= number_to_currency @invoice.subtotal
                 %tr
                   %th.no-border{colspan: 3}
-                  %th= t('vat', rate: (@invoice.vat_rate * 100).round)
+                  %th= Invoice.human_attribute_name :vat_amount_with_rate, rate: (@invoice.vat_rate * 100).round
                   %td= number_to_currency @invoice.vat_amount
                 %tr
                   %th.no-border{colspan: 3}
