--- a/app/views/registrar/invoices/index.html.erb
+++ b/app/views/registrar/invoices/index.html.erb
@@ -27,7 +27,7 @@
                             <%= t(:due_date) %>
                         </th>
                         <th class="col-xs-3">
-                            <%= t(:total) %>
+                            <%= Invoice.human_attribute_name :total %>
                         </th>
                     </tr>
                 </thead>
