--- a/app/views/registrar/invoices/partials/_details.haml
+++ b/app/views/registrar/invoices/partials/_details.haml
@@ -29,7 +29,7 @@
   %dd= @invoice.number
 
   - if @invoice.description.present?
-    %dt= t(:description)
+    %dt= Invoice.human_attribute_name :description
     %dd=@invoice.description
 
   %dt= t(:reference_no)
