--- a/app/views/registrar/invoices/partials/_items.html.erb
+++ b/app/views/registrar/invoices/partials/_items.html.erb
@@ -6,11 +6,11 @@
     <table class="table table-hover table-condensed">
         <thead>
             <tr>
-                <th class="col-xs-4"><%= t(:description) %></th>
-                <th class="col-xs-2"><%= t(:unit) %></th>
+                <th class="col-xs-4"><%= InvoiceItem.human_attribute_name :description %></th>
+                <th class="col-xs-2"><%= InvoiceItem.human_attribute_name :unit %></th>
                 <th class="col-xs-2"><%= InvoiceItem.human_attribute_name :quantity %></th>
-                <th class="col-xs-2"><%= t(:price) %></th>
-                <th class="col-xs-2"><%= t(:total) %></th>
+                <th class="col-xs-2"><%= InvoiceItem.human_attribute_name :price %></th>
+                <th class="col-xs-2"><%= t '.total' %></th>
             </tr>
         </thead>
 
@@ -39,7 +39,7 @@
             </tr>
             <tr>
                 <th class="no-border" colspan="3"></th>
-                <th><%= t(:total) %></th>
+                <th><%= Invoice.human_attribute_name :total %></th>
                 <td><%= number_to_currency @invoice.total %></td>
             </tr>
         </tfoot>
