--- a/app/views/registrar/invoices/index.html.erb
+++ b/app/views/registrar/invoices/index.html.erb
@@ -9,27 +9,83 @@
 <h1>
     <%= t(:invoices) %>
 </h1>
-<%= render 'search_form' %>
+<div class="row">
+    <div class="col-md-12">
+        <hr/>
+        <%= search_form_for @q, url: [:registrar, :invoices], html: { style: 'margin-bottom: 0;' } do |f| %>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <%= f.label t(:minimum_invoice_no) %>
+                        <%= f.search_field :number_gteq, class: 'form-control', placeholder: t(:minimum_invoice_no), autocomplete: 'off' %>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <%= f.label t(:maximum_invoice_no) %>
+                        <%= f.search_field :number_lteq, class: 'form-control', placeholder: t(:maximum_invoice_no), autocomplete: 'off' %>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <%= f.label t(:due_date_from) %>
+                        <%= f.search_field :due_date_gteq, value: params[:q][:due_date_gteq], class: 'form-control js-datepicker', placeholder: t(:due_date_from) %>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <%= f.label t(:due_date_until) %>
+                        <%= f.search_field :due_date_lteq, value: params[:q][:due_date_lteq], class: 'form-control js-datepicker', placeholder: t(:due_date_until) %>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <%= f.label t(:minimum_total) %>
+                        <%= f.search_field :sum_cache_gteq, class: 'form-control', placeholder: t(:minimum_total), autocomplete: 'off' %>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <%= f.label t(:maximum_total) %>
+                        <%= f.search_field :sum_cache_lteq, class: 'form-control', placeholder: t(:maximum_total), autocomplete: 'off' %>
+                    </div>
+                </div>
+                <div class="col-md-3" style="padding-top: 25px;">
+                    <button class="btn btn-default">
+                        &nbsp;
+                        <span class="glyphicon glyphicon-search"></span>
+                        &nbsp;
+                    </button>
+                    <button class="btn btn-default js-reset-form">
+                        <%= t(:clear_fields) %>
+                    </button>
+                </div>
+            </div>
+        <% end %>
+    </div>
+</div>
 <hr/>
 <div class="row">
     <div class="col-md-12">
         <div class="table-responsive">
             <table class="table table-hover table-condensed">
                 <thead>
-                    <tr>
-                        <th class="col-xs-3">
-                            <%= t(:invoice) %>
-                        </th>
-                        <th class="col-xs-3">
-                            <%= t(:receipt_date) %>
-                        </th>
-                        <th class="col-xs-3">
-                            <%= t(:due_date) %>
-                        </th>
-                        <th class="col-xs-3">
-                            <%= Invoice.human_attribute_name :total %>
-                        </th>
-                    </tr>
+                <tr>
+                    <th class="col-xs-3">
+                        <%= t(:invoice) %>
+                    </th>
+                    <th class="col-xs-3">
+                        <%= t(:receipt_date) %>
+                    </th>
+                    <th class="col-xs-3">
+                        <%= t(:due_date) %>
+                    </th>
+                    <th class="col-xs-3">
+                        <%= t(:total) %>
+                    </th>
+                </tr>
                 </thead>
                 <tbody>
                 <% @invoices.each do |x| %>
@@ -68,3 +124,9 @@
         <%= paginate @invoices %>
     </div>
 </div>
+<script>
+    $(".js-reset-form").on("click", function (e) {
+        e.preventDefault();
+        return window.location = " <%= registrar_invoices_path %>";
+    });
+</script>
