Revert "Improve UI"
This reverts commit 9f915c4

--- a/app/views/admin/registrars/_form.html.erb
+++ b/app/views/admin/registrars/_form.html.erb
@@ -14,7 +14,7 @@
                             <%= f.label :name %>
                         </div>
                         <div class="col-md-7">
-                            <%= f.text_field :name, required: true, autofocus: true, class: 'form-control' %>
+                            <%= f.text_field :name, required: true, class: 'form-control' %>
                         </div>
                     </div>
 
