--- a/app/views/admin/registrars/_form.html.erb
+++ b/app/views/admin/registrars/_form.html.erb
@@ -29,6 +29,15 @@
 
                     <div class="form-group">
                         <div class="col-md-4 control-label">
+                            <%= f.label :vat_no %>
+                        </div>
+                        <div class="col-md-7">
+                            <%= f.text_field(:vat_no, class: 'form-control') %>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-md-4 control-label">
                             <%= f.label :phone %>
                         </div>
                         <div class="col-md-7">
@@ -51,6 +60,24 @@
                         </div>
                         <div class="col-md-7">
                             <%= f.email_field :email, class: 'form-control' %>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-md-4 control-label">
+                            <%= f.label :billing_email %>
+                        </div>
+                        <div class="col-md-7">
+                            <%= f.email_field :billing_email, class: 'form-control' %>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-md-4 control-label">
+                            <%= f.label :accounting_customer_code %>
+                        </div>
+                        <div class="col-md-7">
+                            <%= f.text_field :accounting_customer_code, class: 'form-control', required: true %>
                         </div>
                     </div>
                 </div>
@@ -115,8 +142,6 @@
             </div>
         </div>
     </div>
-
-    <%= render 'admin/registrars/form/billing', f: f %>
 
     <div class="row">
         <div class="col-md-8">
