Revert "Extract partial"
This reverts commit 32df852

--- a/app/views/admin/registrars/show.html.erb
+++ b/app/views/admin/registrars/show.html.erb
@@ -42,6 +42,12 @@
                         <%= @registrar.reg_no %>
                     </dd>
                     <dt>
+                        <%= t(:vat_no) %>
+                    </dt>
+                    <dd>
+                        <%= @registrar.vat_no %>
+                    </dd>
+                    <dt>
                         <%= t(:reference_no) %>
                     </dt>
                     <dd>
@@ -64,6 +70,12 @@
                     </dt>
                     <dd>
                         <%= @registrar.website %>
+                    </dd>
+                    <dt>
+                        <%= Registrar.human_attribute_name :accounting_customer_code %>
+                    </dt>
+                    <dd>
+                        <%= @registrar.accounting_customer_code %>
                     </dd>
                 </dl>
             </div>
@@ -108,11 +120,16 @@
                     <dd>
                         <%= @registrar.billing_address %>
                     </dd>
+                    <dt>
+                        <%= t(:billing_email) %>
+                    </dt>
+                    <dd>
+                        <%= @registrar.billing_email %>
+                    </dd>
                 </dl>
             </div>
         </div>
         <%= render 'admin/registrars/show/preferences', registrar: registrar %>
-        <%= render 'billing', registrar: @registrar %>
     </div>
 </div>
 <div class="row">
