--- a/app/views/registrar/settings/auto_invoice/edit.html.erb
+++ b/app/views/registrar/settings/auto_invoice/edit.html.erb
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-    <li><%= link_to t('registrar.settings.index.index.header'), registrar_settings_root_path %></li>
+    <li><%= link_to t('registrar.settings.index.show.header'), registrar_settings_root_path %></li>
 </ol>
 
 <div class="page-header">
