--- a/app/views/registrar/settings/auto_invoice/_form.html.erb
+++ b/app/views/registrar/settings/auto_invoice/_form.html.erb
@@ -1,12 +1,12 @@
-<%= form_for @subscription, url: registrar_settings_billing_subscription_path, method: :patch, html: { class: 'form-horizontal' } do |f| %>
-    <%= render 'form_errors', target: @subscription %>
+<%= form_for @registrar, url: registrar_settings_auto_invoice_path, method: :patch, html: { class: 'form-horizontal' } do |f| %>
+    <%= render 'form_errors', target: @registrar %>
 
     <div class="form-group">
         <div class="col-sm-offset-3 col-sm-3">
             <div class="checkbox">
                 <label>
-                    <%= f.check_box :active %>
-                    <%= Billing::Subscription.human_attribute_name :active %>
+                    <%= f.check_box :auto_invoice %>
+                    <%= Registrar.human_attribute_name :auto_invoice %>
                 </label>
             </div>
         </div>
