--- a/app/views/registrar/settings/auto_invoice/_form.html.erb
+++ b/app/views/registrar/settings/auto_invoice/_form.html.erb
@@ -15,7 +15,7 @@
     <div class="form-group">
         <%= f.label :low_balance_threshold, class: 'col-sm-3 control-label' %>
 
-        <div class="col-sm-3">
+        <div class="col-sm-2">
             <div class="input-group">
                 <%= f.money_field :low_balance_threshold, required: true, autofocus: true,
                                   class: 'form-control' %>
@@ -27,11 +27,20 @@
     <div class="form-group">
         <%= f.label :top_up_amount, class: 'col-sm-3 control-label' %>
 
-        <div class="col-sm-3">
+        <div class="col-sm-2">
             <div class="input-group">
                 <%= f.money_field :top_up_amount, class: 'form-control', required: true %>
                 <div class="input-group-addon"><%= Money::default_currency.symbol %></div>
             </div>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <%= f.label :iban, class: 'col-sm-3 control-label' %>
+
+        <div class="col-sm-4">
+            <%= f.text_field :iban, class: 'form-control', required: true %>
+            <span class="help-block"><%= t '.iban_hint' %></span>
         </div>
     </div>
 
