--- a/app/views/registrar/invoices/partials/_items.haml
+++ b/app/views/registrar/invoices/partials/_items.haml
@@ -16,7 +16,7 @@
           %td= x.unit
           %td= x.quantity
           %td= currency(x.price)
-          %td= currency(x.item_sum_without_vat)
+          %td= currency(x.amount)
     %tfoot
       %tr
         %th{colspan: 3}
