--- a/app/views/registrar/settings/auto_invoice/_for_settings.html.erb
+++ b/app/views/registrar/settings/auto_invoice/_for_settings.html.erb
@@ -3,23 +3,23 @@
 
     <table class="table">
         <tr>
-            <td><%= Registrar.human_attribute_name :auto_invoice %></td>
-            <td><%= registrar.auto_invoice %></td>
+            <td><%= Registrar.human_attribute_name :auto_invoice_activated %></td>
+            <td><%= registrar.auto_invoice_activated %></td>
         </tr>
 
         <tr>
-            <td><%= Registrar.human_attribute_name :low_balance_threshold %></td>
-            <td><%= registrar.low_balance_threshold&.format %></td>
+            <td><%= Registrar.human_attribute_name :auto_invoice_low_balance_threshold %></td>
+            <td><%= number_to_currency registrar.auto_invoice_low_balance_threshold %></td>
         </tr>
 
         <tr>
-            <td><%= Registrar.human_attribute_name :top_up_amount %></td>
-            <td><%= registrar.top_up_amount&.format %></td>
+            <td><%= Registrar.human_attribute_name :auto_invoice_top_up_amount %></td>
+            <td><%= number_to_currency registrar.auto_invoice_top_up_amount %></td>
         </tr>
 
         <tr>
-            <td><%= Registrar.human_attribute_name :iban %></td>
-            <td><%= registrar.iban %></td>
+            <td><%= Registrar.human_attribute_name :auto_invoice_iban %></td>
+            <td><%= registrar.auto_invoice_iban %></td>
         </tr>
     </table>
 
