--- a/app/views/registrar/settings/auto_invoice/_form.html.erb
+++ b/app/views/registrar/settings/auto_invoice/_form.html.erb
@@ -5,19 +5,20 @@
         <div class="col-sm-offset-3 col-sm-3">
             <div class="checkbox">
                 <label>
-                    <%= f.check_box :auto_invoice %>
-                    <%= Registrar.human_attribute_name :auto_invoice %>
+                    <%= f.check_box :auto_invoice_activated %>
+                    <%= Registrar.human_attribute_name :auto_invoice_activated %>
                 </label>
             </div>
         </div>
     </div>
 
     <div class="form-group">
-        <%= f.label :low_balance_threshold, class: 'col-sm-3 control-label' %>
+        <%= f.label :auto_invoice_low_balance_threshold, class: 'col-sm-3 control-label' %>
 
         <div class="col-sm-2">
             <div class="input-group">
-                <%= f.money_field :low_balance_threshold, required: true, autofocus: true,
+                <%= f.money_field :auto_invoice_low_balance_threshold, required: true,
+                                  autofocus: true,
                                   class: 'form-control' %>
                 <div class="input-group-addon"><%= Money::default_currency.symbol %></div>
             </div>
@@ -25,21 +26,21 @@
     </div>
 
     <div class="form-group">
-        <%= f.label :top_up_amount, class: 'col-sm-3 control-label' %>
+        <%= f.label :auto_invoice_top_up_amount, class: 'col-sm-3 control-label' %>
 
         <div class="col-sm-2">
             <div class="input-group">
-                <%= f.money_field :top_up_amount, class: 'form-control', required: true %>
+                <%= f.money_field :auto_invoice_top_up_amount, class: 'form-control', required: true %>
                 <div class="input-group-addon"><%= Money::default_currency.symbol %></div>
             </div>
         </div>
     </div>
 
     <div class="form-group">
-        <%= f.label :iban, class: 'col-sm-3 control-label' %>
+        <%= f.label :auto_invoice_iban, class: 'col-sm-3 control-label' %>
 
         <div class="col-sm-4">
-            <%= f.text_field :iban, class: 'form-control', required: true %>
+            <%= f.text_field :auto_invoice_iban, class: 'form-control', required: true %>
             <span class="help-block"><%= t '.iban_hint' %></span>
         </div>
     </div>
