Use default translations

--- a/app/views/registrar/invoices/index.haml
+++ b/app/views/registrar/invoices/index.haml
@@ -53,7 +53,7 @@
           %tr
             %th{class: 'col-xs-3'}= t(:invoice)
             %th{class: 'col-xs-3'}= t(:receipt_date)
-            %th{class: 'col-xs-3'}= t(:due_date)
+            %th{class: 'col-xs-3'}= Invoice.human_attribute_name :due_date
             %th{class: 'col-xs-3'}= t(:total)
         %tbody
           - @invoices.each do |x|
