--- a/app/views/registrar/invoices/partials/_details.haml
+++ b/app/views/registrar/invoices/partials/_details.haml
@@ -8,7 +8,7 @@
     %dt= t(:cancel_date)
     %dd= l(@invoice.cancelled_at, format: :date_long)
 
-  %dt= t(:due_date)
+  %dt= Invoice.human_attribute_name :due_date
   - if @invoice.cancelled?
     %dd.text-grey= t(:cancelled)
   - else
