--- a/app/views/registrar/invoices/index.haml
+++ b/app/views/registrar/invoices/index.haml
@@ -66,7 +66,7 @@
               - else
                 %td{class: 'text-danger'}= t(:unpaid)
 
-              %td= l(x.due_date, format: :date_long)
+              %td= l x.due_date
               %td= currency(x.total)
 .row
   .col-md-12
