--- a/app/views/registrar/invoices/partials/_details.haml
+++ b/app/views/registrar/invoices/partials/_details.haml
@@ -1,7 +1,7 @@
 %h4= t(:details)
 %hr
 %dl.dl-horizontal
-  %dt= t(:issue_date)
+  %dt= Invoice.human_attribute_name :date
   %dd= l(@invoice.created_at, format: :date_long)
 
   - if @invoice.cancelled?
