--- a/app/views/admin/bank_statements/show.haml
+++ b/app/views/admin/bank_statements/show.haml
@@ -61,7 +61,7 @@
         %tbody
           - @bank_transactions.each do |x|
             %tr
-              %td= link_to(l(x.paid_at, format: :date_long), [:admin, x])
+              %td= link_to(l(x.paid_at.to_date), [:admin, x])
               %td= x.buyer_name
               %td= currency(x.sum)
               %td= x.currency
