--- a/app/views/registrar/invoices/pdf.haml
+++ b/app/views/registrar/invoices/pdf.haml
@@ -153,7 +153,7 @@
 
             - if @invoice.cancelled?
               %dt= t(:cancel_date)
-              %dd= l(@invoice.cancelled_at, format: :date_long)
+              %dd= l @invoice.cancelled_at.to_date
 
             %dt= Invoice.human_attribute_name :due_date
             - if @invoice.cancelled?
@@ -163,7 +163,7 @@
 
             %dt= t(:receipt_date)
             - if @invoice.binded?
-              %dd= l(@invoice.receipt_date, format: :date_long)
+              %dd= l @invoice.receipt_date.to_date
             - elsif @invoice.cancelled?
               %dd= t(:cancelled)
             - else
