--- a/app/views/registrar/invoices/partials/_items.haml
+++ b/app/views/registrar/invoices/partials/_items.haml
@@ -4,11 +4,11 @@
   %table.table.table-hover.table-condensed
     %thead
       %tr
-        %th{class: 'col-xs-4'}= t(:description)
-        %th{class: 'col-xs-2'}= t(:unit)
+        %th{class: 'col-xs-4'}= InvoiceItem.human_attribute_name :description
+        %th{class: 'col-xs-2'}= InvoiceItem.human_attribute_name :unit
         %th{class: 'col-xs-2'}= InvoiceItem.human_attribute_name :quantity
-        %th{class: 'col-xs-2'}= t(:price)
-        %th{class: 'col-xs-2'}= t(:total)
+        %th{class: 'col-xs-2'}= InvoiceItem.human_attribute_name :price
+        %th{class: 'col-xs-2'}= InvoiceItem.human_attribute_name :total
     %tbody
       - @invoice.items.each do |x|
         %tr
@@ -28,5 +28,5 @@
         %td= number_to_currency @invoice.vat_amount
       %tr
         %th.no-border{colspan: 3}
-        %th= t(:total)
+        %th= Invoice.human_attribute_name :total
         %td= number_to_currency @invoice.total
