--- a/app/views/registrar/invoices/pdf.haml
+++ b/app/views/registrar/invoices/pdf.haml
@@ -228,7 +228,7 @@
                   %th{class: 'col-xs-3'}= InvoiceItem.human_attribute_name :price
                   %th{class: 'col-xs-2'}= InvoiceItem.human_attribute_name :total
               %tbody
-                - @invoice.items.each do |invoice_item|
+                - @invoice.each do |invoice_item|
                   %tr
                     %td= t(invoice_item.description)
                     %td= invoice_item.unit
