--- a/app/views/registrar/invoices/partials/_items.html.erb
+++ b/app/views/registrar/invoices/partials/_items.html.erb
@@ -35,7 +35,7 @@
                 </td>
             </tr>
 
-            <% unless @invoice.vat_rate.no_vat? %>
+            <% if @invoice.vat? %>
                 <tr>
                     <th class="no-border" colspan="3"></th>
                     <th><%= "VAT #{@invoice.vat_rate.format}" %></th>
