--- a/app/views/registrar/invoices/pdf.haml
+++ b/app/views/registrar/invoices/pdf.haml
@@ -240,10 +240,13 @@
                   %th{colspan: 3}
                   %th= Invoice.human_attribute_name :subtotal
                   %td= number_to_currency @invoice.subtotal
-                %tr
-                  %th.no-border{colspan: 3}
-                  %th= "VAT #{number_to_percentage(@invoice.vat_rate, precision: 1)}"
-                  %td= number_to_currency @invoice.vat_amount
+
+                - if @invoice.vat?
+                  %tr
+                    %th.no-border{colspan: 3}
+                    %th= "VAT #{@invoice.vat_rate.format}"
+                    %td= number_to_currency @invoice.vat_amount
+
                 %tr
                   %th.no-border{colspan: 3}
                   %th= Invoice.human_attribute_name :total
