Disallow `epp` role users editing auto account top-up settings

--- a/app/views/registrar/settings/auto_account_top_up/_for_settings.html.erb
+++ b/app/views/registrar/settings/auto_account_top_up/_for_settings.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel panel-default panel-auto-account-top-up">
     <div class="panel-heading"><%= t '.header' %></div>
 
     <table class="table">
